[project]
name = "teste-tts-stt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faster-whisper>=1.2.1",
    "numpy>=2.5.0",
    "piper-tts>=1.4.2",
    "pynput>=1.8.2",
    "scipy>=1.18.0",
    "sounddevice>=0.5.5",
]
